# mergeproof-ai

./: .env.example  .gitignore  LICENSE  README.md  package-lock.json  package.json  plugin.json  tsconfig.json
.claude-plugin/: plugin.json
.cursor-plugin/: plugin.json
.mergeproof/: automations.example.json  checks.example.json  config.json  hooks.example.json  instructions.md  mcp.example.json  permissions.example.json  recipes.example.json  reviewers.example.json  slack-scopes.example.json  tools.example.json  webhook-automations.example.json
app/: globals.css  layout.tsx  page.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
commands/: mergeproof-review.md
components/: evidence-matrix.tsx
docs/: jetbrains.md
lib/: acp.test.ts  acp.ts  agent-review.test.ts  agent-review.ts  agents.test.ts  agents.ts  analyze.ts  ask.test.ts  ask.ts  attestation.test.ts  attestation.ts  audit.test.ts  audit.ts  auth.test.ts  auth.ts  autofix.ts  autopilot.test.ts  autopilot.ts  benchmark.test.ts  benchmark.ts  change-publish.test.ts  change-publish.ts  change-request.test.ts  change-request.ts  chat-turn.test.ts  chat-turn.ts  chat.test.ts  chat.ts  checks.test.ts  coderabbit-config.test.ts  coderabbit-config.ts  completion.test.ts  completion.ts  configuration.test.ts  configuration.ts  conflicts.test.ts  conflicts.ts  consensus.test.ts  consensus.ts  criteria.test.ts  (+147 more)
outputs/: competitive-parity.md  mergeproof-design.md
(+30 files in other folders)
