[package]
name = "mergeproof-desktop"
version = "0.1.0"
description = "Local-first desktop client for MergeProof"
authors = ["MergeProof"]
edition = "2021"

[lib]
name = "mergeproof_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"

[features]
custom-protocol = ["tauri/custom-protocol"]
default = ["custom-protocol"]
